chore: update notebook

--- a/solution_notebook.ipynb
+++ b/solution_notebook.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Primero se experimentará con la configuración donde el *background* calculado en base a la mediana de 30 frames aleatorios del video."
+    "Primero se experimentará con la configuración donde el *background* calculado en base a la mediana de 30 frames aleatorios del video. Solo calculando el *background* una vez al inicio del video, sin actualizaciones entre intervalos de tiempo."
    ]
   },
   {
